force-app/main/default/objects/SBQQ__Subscription__c/fields/Annual_Amount__c.field-meta.xml
<CustomField>
    <fullName>Annual_Amount__c</fullName>
    <description>RUBX-79 Subscription Annual Amount</description>
    <label>Annual Amount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>