force-app/main/default/objects/SBQQ__Subscription__c/fields/Net_Total__c.field-meta.xml
<CustomField>
    <fullName>Net_Total__c</fullName>
    <description>This field contains the Net Price rounded to two decimal places.</description>
    <formula>ROUND(SBQQ__NetPrice__c,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field contains the Net Price rounded to two decimal places.</inlineHelpText>
    <label>Net Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>