force-app/main/default/objects/SBQQ__Subscription__c/fields/Payaway__c.field-meta.xml
<CustomField>
        <fullName>Payaway__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payaway</label>
        <type>Checkbox</type>
    </CustomField>