force-app/main/default/objects/SBQQ__Subscription__c/fields/QS_Annual_Recurring_Revenue__c.field-meta.xml
<CustomField>
        <fullName>QS_Annual_Recurring_Revenue__c</fullName>
        <description>12-month recurring value of the Subscription Product. Populated from the formula on the Quote Line.</description>
        <inlineHelpText>12-month recurring value of the Subscription Product. Populated from the formula on the Quote Line.</inlineHelpText>
        <label>Annual Recurring Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>