force-app/main/default/objects/SBQQ__Subscription__c/fields/QS_CA_End_Date__c.field-meta.xml
<CustomField>
    <fullName>QS_CA_End_Date__c</fullName>
    <description>Used to populate the correct date in the CA2 funtionality for MDQ vs non-MDQ Subscriptions. MDQ Subscriptions should be pulling the Segment End Date instead of End Date.</description>
    <formula>IF(ISBLANK(SBQQ__SegmentEndDate__c), 
SBQQ__EndDate__c, 
SBQQ__SegmentEndDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If the Segment End Date is populated, this field displays the Segment End Date. If it is blank, this field displays the End Date. Used for Customer Asset data.</inlineHelpText>
    <label>CA End Date</label>
    <type>Date</type>
</CustomField>