force-app/main/default/objects/SBQQ__Subscription__c/fields/QS_CA_Quantity__c.field-meta.xml
<CustomField>
    <fullName>QS_CA_Quantity__c</fullName>
    <description>Used to populate the correct quantity in the CA2 funtionality for MDQ vs non-MDQ Subscriptions. MDQ Subscriptions should be pulling the Segment Quantity instead of Quantity.</description>
    <formula>IF(OR(ISNULL(SBQQ__SegmentQuantity__c), 
SBQQ__SegmentQuantity__c = 0), 
SBQQ__Quantity__c, 
SBQQ__SegmentQuantity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If the Segment Quantity is populated, this field displays the Segment Quantity. If it is blank, this field displays the Quantity. Used for Customer Asset data.</inlineHelpText>
    <label>CA Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>