force-app/main/default/objects/SBQQ__Subscription__c/fields/QS_Customer_Asset_Unique_Id__c.field-meta.xml
<CustomField>
        <fullName>QS_Customer_Asset_Unique_Id__c</fullName>
        <description>A unique key that identifies a Customer Asset.</description>
        <formula>SBQQ__Account__r.Id &amp; SBQQ__Product__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>A unique key that identifies a Customer Asset.</inlineHelpText>
        <label>Customer Asset Unique Id</label>
        <type>Text</type>
    </CustomField>