force-app/main/default/objects/SBQQ__Subscription__c/fields/QS_Product_Subscription_Pricing__c.field-meta.xml
<CustomField>
        <fullName>QS_Product_Subscription_Pricing__c</fullName>
        <formula>TEXT(SBQQ__Product__r.SBQQ__SubscriptionPricing__c)</formula>
        <label>Product Subscription Pricing</label>
        <type>Text</type>
    </CustomField>