force-app/main/default/objects/SBQQ__Subscription__c/fields/SBQQ__ComponentDiscountedByPackage__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ComponentDiscountedByPackage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fixes additional discount for this component to the parent package discount.</description>
        <inlineHelpText>Fixes additional discount for this component to the parent package discount.</inlineHelpText>
        <label>Component Discounted By Package</label>
        <type>Checkbox</type>
    </CustomField>