force-app/main/default/objects/SBQQ__Subscription__c/fields/SBQQ__ContractNumber__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ContractNumber__c</fullName>
        <description>Number of associated contract.</description>
        <formula>SBQQ__Contract__r.ContractNumber</formula>
        <inlineHelpText>Number of associated contract.</inlineHelpText>
        <label>Contract #</label>
        <type>Text</type>
    </CustomField>