force-app/main/default/objects/SBQQ__Subscription__c/fields/SBQQ__CreditProductId__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__CreditProductId__c</fullName>
        <description>ID of upgrade credit product for this subscription.</description>
        <formula>SBQQ__Product__r.SBQQ__UpgradeCredit__c</formula>
        <inlineHelpText>ID of upgrade credit product for this subscription.</inlineHelpText>
        <label>Credit Product Id</label>
        <type>Text</type>
    </CustomField>