force-app/main/default/objects/SBQQ__Subscription__c/fields/SBQQ__CustomerPrice__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__CustomerPrice__c</fullName>
        <description>Price the end user paid for this subscription.</description>
        <inlineHelpText>Price paid for this subscription.</inlineHelpText>
        <label>Customer Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>