force-app/main/default/objects/SBQQ__Subscription__c/fields/SBQQ__Dimension__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Dimension__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Price Dimension associated with this Subscription</description>
        <inlineHelpText>Price Dimension associated with this Subscription</inlineHelpText>
        <label>Price Dimension</label>
        <referenceTo>SBQQ__Dimension__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </CustomField>