force-app/main/default/objects/SBQQ__Subscription__c/fields/SBQQ__DimensionType__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__DimensionType__c</fullName>
        <formula>TEXT(SBQQ__Dimension__r.SBQQ__Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dimension Type</label>
        <type>Text</type>
    </CustomField>