force-app/main/default/objects/SBQQ__Subscription__c/fields/SBQQ__Discount__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Discount__c</fullName>
        <description>Additional Discount for this Subscription, if expressed as a percentage</description>
        <inlineHelpText>Additional Discount for this Subscription, if expressed as a percentage</inlineHelpText>
        <label>Additional Disc. (%)</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Percent</type>
    </CustomField>