force-app/main/default/objects/SBQQ__Subscription__c/fields/SBQQ__DistributorDiscount__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__DistributorDiscount__c</fullName>
        <description>Discount to be taken on top of the Partner Discount.</description>
        <inlineHelpText>Discount to be taken on top of the Partner Discount.</inlineHelpText>
        <label>Distributor Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </CustomField>