force-app/main/default/objects/SBQQ__Subscription__c/fields/SBQQ__EndDate__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__EndDate__c</fullName>
        <description>The last date this contract is valid.</description>
        <formula>if ( ISBLANK (SBQQ__SubscriptionEndDate__c), SBQQ__Contract__r.EndDate, SBQQ__SubscriptionEndDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The last date this contract is valid.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </CustomField>