force-app/main/default/objects/SBQQ__Subscription__c/fields/SBQQ__HasConsumptionSchedule__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__HasConsumptionSchedule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this subscription has at least one consumption schedule</description>
        <inlineHelpText>Indicates if this subscription has at least one consumption schedule</inlineHelpText>
        <label>Has Consumption Schedules</label>
        <type>Checkbox</type>
    </CustomField>