force-app/main/default/objects/SBQQ__Subscription__c/fields/SBQQ__ListPrice__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ListPrice__c</fullName>
        <description>List price for this subscription product.</description>
        <inlineHelpText>List price for this subscription product.</inlineHelpText>
        <label>List Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>