force-app/main/default/objects/SBQQ__Subscription__c/fields/SBQQ__MarkupAmount__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__MarkupAmount__c</fullName>
        <description>Markup for this Subscription, if expressed as an amount</description>
        <inlineHelpText>Markup for this Subscription, if expressed as an amount</inlineHelpText>
        <label>Markup (Amt)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>