force-app/main/default/objects/SBQQ__Subscription__c/fields/SBQQ__OrderProduct__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__OrderProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The order product where this subscription is originated from.</description>
        <inlineHelpText>The order product where this subscription is generated from.</inlineHelpText>
        <label>Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </CustomField>