force-app/main/default/objects/SBQQ__Subscription__c/fields/SBQQ__OriginalUnitCost__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__OriginalUnitCost__c</fullName>
        <description>Original unit cost of the subscription at the time of purchase before Cost Schedules were applied.</description>
        <inlineHelpText>Original unit cost of the subscription at the time of purchase before Cost Schedules were applied.</inlineHelpText>
        <label>Original Unit Cost</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>