force-app/main/default/objects/SBQQ__Subscription__c/fields/SBQQ__PackageProductCode__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__PackageProductCode__c</fullName>
        <description>Product code for the package generated by appending codes of selected components according to specified pattern.</description>
        <inlineHelpText>A code listing each of this package&apos;s components based on their component codes.</inlineHelpText>
        <label>Package Product Code</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>