force-app/main/default/objects/SBQQ__Subscription__c/fields/SBQQ__PackageProductDescription__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__PackageProductDescription__c</fullName>
        <description>Product Description for the package generated by appending descriptions of selected components according to specified pattern.</description>
        <inlineHelpText>A description of each component in this package.</inlineHelpText>
        <label>Package Product Description</label>
        <length>32000</length>
        <type>Html</type>
    </CustomField>