force-app/main/default/objects/SBQQ__Subscription__c/fields/SBQQ__ProductId__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ProductId__c</fullName>
        <description>Convenience field to support integration with Service Cloud.</description>
        <formula>SBQQ__Product__c</formula>
        <inlineHelpText>Convenience field to support integration with Service Cloud.</inlineHelpText>
        <label>Product Id</label>
        <type>Text</type>
    </CustomField>