force-app/main/default/objects/SBQQ__Subscription__c/fields/SBQQ__ProductName__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ProductName__c</fullName>
        <description>Pulls in the Product Name</description>
        <formula>SBQQ__Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls in the Product Name</inlineHelpText>
        <label>Product Name</label>
        <type>Text</type>
    </CustomField>