force-app/main/default/objects/SBQQ__Subscription__c/fields/SBQQ__QuoteLine__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__QuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quote line that generated this subscription.</description>
        <inlineHelpText>Quote line that generated this subscription.</inlineHelpText>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </CustomField>