force-app/main/default/objects/SBQQ__Subscription__c/fields/SBQQ__RegularPrice__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__RegularPrice__c</fullName>
        <description>Regular Price for this Subscription.</description>
        <inlineHelpText>Regular Price for this Subscription.</inlineHelpText>
        <label>Regular Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>