force-app/main/default/objects/SBQQ__Subscription__c/fields/SBQQ__RenewalProductId__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__RenewalProductId__c</fullName>
        <description>Exists for convenience of not having to run relationship queries.</description>
        <formula>IF(ISBLANK(SBQQ__Product__r.SBQQ__RenewalProduct__c),SBQQ__Product__c,IF(ISPICKVAL(SBQQ__Product__r.SBQQ__RenewalProduct__r.SBQQ__SubscriptionPricing__c, &apos;&apos;), SBQQ__Product__c, SBQQ__Product__r.SBQQ__RenewalProduct__c))</formula>
        <inlineHelpText>Product ID for the renewal subscription.</inlineHelpText>
        <label>Renewal Product Id</label>
        <type>Text</type>
    </CustomField>