force-app/main/default/objects/SBQQ__Subscription__c/fields/SBQQ__RenewalProductOptionId__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__RenewalProductOptionId__c</fullName>
        <formula>SBQQ__ProductOption__r.SBQQ__RenewalProductOption__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Product Option ID</label>
        <type>Text</type>
    </CustomField>