force-app/main/default/objects/SBQQ__Subscription__c/fields/SBQQ__RenewalProductOptionProductId__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__RenewalProductOptionProductId__c</fullName>
        <formula>SBQQ__ProductOption__r.SBQQ__RenewalProductOption__r.SBQQ__OptionalSKU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Product Option Product ID</label>
        <type>Text</type>
    </CustomField>